# bitbucket-code-review-agent

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  sentinel-config-template.yaml  sentinel-config.yaml  sentinel.yaml
diags/: generate_all.py  system.py
docs/: sentinel.agents.md
docs/documentation/: developer_documentation.md  user_documentation.md
site/: 404.html  index.html
site/architecture/overview/: index.html
site/search/: search_index.json
src/: code_context_provider.py  code_index_builder.py  commit.py  confluence_processor.py  deadcode_finder.py  docstring.py  documentation_reviewer.py  function.py  jira_processor.py  line.py  logger_config.py  logic_reviewer.py  pull_request_processor.py  review_code.py  reviewer.py  unit_test_reviewer.py  webhook_receiver.py
